--- a/Accounts Payable.html
+++ b/Accounts Payable.html
@@ -70,9 +70,26 @@
             <p>
               Ref ID: R008-2021-07-0002
             </p>
-            <p>PM ID: PM12345</p>
+            <div class="row_between">
+                <div class="row">
+                    <h1>PM ID:</h1> <p>PM12345</p>
+                </div>
+                <div class="row">
+                    <h1>Available Balance:</h1>
+                    <h1>$34,500</h1>
+                </div>
+            </div>
           </div>
-          
+          <div class="top_select_add row_between">
+            <div class="left">
+              <div class="select">ACCOUNTS PAYABLE</div>
+              <div>STATUS HISTORY</div>
+            </div>
+            <div class="row">
+                <span class="top_button">Add Expense</span>
+                <span class="top_button">Add Reimbursement</span>
+            </div>
+          </div>
           <div class="bottom_submit">
             <div class="cancel">Cancel</div>
             <div class="next">Next</div>
