--- a/landlord.html
+++ b/landlord.html
@@ -63,7 +63,7 @@
           <li>Files</li>
           <li>Summary</li>
           </ul>
-          <!-- PROPERTY INFO -->
+          <!-- landlord INFO -->
           <div class="navigation_info">
             <h1>PROPERTY INFO</h1>
             <h2>ADDress:57355 NO.3a</h2>
@@ -195,11 +195,11 @@
                 </select>
               </div>
             </div>
-            <div class="banking" style="background-color: #EEF5FF;">
+            <div class="banking">
               <h1>E.F.T. (Electronic Fund Transfer)</h1>
               <div class="eft">
                 <div class="select">
-                  <input type="radio" />
+                  <input type="radio" name="cheque" />
                   E.F.T. (Electronic Fund Transfer)
                 </div>
                 <!-- 选择银行的 -->
@@ -248,7 +248,7 @@
                 <div class="row_line">
                   <div>
                     <h1>Type</h1>
-                    <select style="color: #505050;">
+                    <select>
                       <option>Chequeing</option>
                     </select>
                   </div>
@@ -303,7 +303,7 @@
                     </div>
                     <div>
                       <h1>Birth date (optional)</h1>
-                      <div id="begin-date" style="width: 200px;">
+                      <div id="begin-date">
                       </div>
                   </div>
                   
@@ -420,169 +420,25 @@
 </div>
 
 </div>
-  <!-- 点击后变背景颜色 -->
-<script type="text/javascript">
-function getRadio(){
-    var c = $('input:radio[name="option"]:checked').val(); 
-}
-var curObj = null;
-var preColor;
-onload = function(){
-    var a = document.getElementById("select").getElementsByTagName("span");
-    console.log(a,'这个是a');
-    for(var i=0;i<a.length;i++){
-        a[i].onclick = (function(obj){
-            return function(){
-                if(curObj!=null) curObj.style.backgroundColor = preColor;
-                preColor = obj.style.backgroundColor;
-                obj.innerHTML="<span style='background:black'></span>"";
-                obj.style.backgroundColor = "#F6F8F7";
-                curObj = obj;
-            }
-        })(a[i]);
-    }
-}
-</script>
 <!-- 插入银行的div选项 -->
-<script type="text/javascript">
-  var bank_img = new Array('td','rbc','bmo','scotia','cibc','hsbc','vancity','coast','national','cwb');
-  var a = document.getElementById('banks');
-  console.log(a);
-  for(var i=0 ;i<3;i++){
-    a.innerHTML+="<div class='select_bank'></div>";
-    for(var j=0;j<4;j++){
-      var b = document.getElementsByClassName('select_bank')[i];
-      if(i*4+j<bank_img.length){
-        b.innerHTML+=`<input type='radio' name=option_bank /><div><img src='./images/pc/pm/${bank_img[i*4+j]}.png'/></div>`;
-      }
-      else if(i==2 && j==3){}
-      else{
-        b.innerHTML+=`<input type='radio' name=option_bank />other`;
-      }
-    }
-  }
-</script>
-<!-- 添加弹窗 -->
-<script type="text/javascript">
-  window.onload=function () {
-   //获取弹窗按钮
-   var add_new=document.getElementById("add_new");
-   // var close=document.getElementsByClassName("close")[0];
-   var my_modal=document.getElementById("my_modal");
-   var modal_out = document.getElementById("modal_out");
-   
-   //按钮绑定事件
-   add_new.onclick=function () {
-     //获取弹窗
-     my_modal.style.display="flex";
-     modal_out.style.display="flex";
-     //点击了add之后，默认选择personal，选择后会改变其背景颜色
-     var a = document.getElementsByName('per_cor');
-    var target = document.getElementsByClassName('select_1');
-    a[0].checked = true;
-    target[0].style.backgroundColor = "#EEF5FF";
-    for( var i=0;i<a.length;i++){
-      a[i].onclick = (function(obj,i){
-        return function(){
-          for(var j=0;j<target.length;j++){
-              if(j==i){
-                  continue;
-              }
-              else{
-                target[j].style.backgroundColor = "#FFFFFF";
-              }
-          }
-          target[i].style.backgroundColor = "#EEF5FF";;
-        }
-      })(a[i],i);
-    }
-   }
-   close.onclick=function () {
-    my_modal.style.display="none";
-   }
-   //用户点击其他地方关闭弹窗
-   window.onclick=function (event) {
-     // if(event.target !=myModal && event.target != btn){
-     // myModal.style.display="none";
-     // modal_out.style.display="none";
-     // }
-     if(event.target == modal_out){
-      my_modal.style.display="none";
-     modal_out.style.display="none";
-     }
-     
-   }
-   }
+<script type="text/javascript" src='./js/插入银行的.js'></script>
+<!-- 引入弹窗的js -->
+<script type="text/javascript" src='./js/弹窗的js.js'>
  </script>
+ <script type="text/javascript" src='./js/点击背景颜色变化的.js'></script>
+ <!-- 弹窗显示 -->
+<script type="text/javascript" >
+  window.onload=function(){
+  change_background('cheque','banking');
+  }
+ document.getElementById('add_new').onclick=function(){
+  modal('add_new','my_modal','modal_out'); //第一个按钮id，第二个弹窗id，第三个遮罩id
+  change_background('per_cor','select_1');
+ }
+</script>
  <script type="text/javascript" src="./js/jquery-3.5.1.js"></script>
  <script type="text/javascript" src="./dist/calendar.min.js"></script>
  <!-- 日历的js -->
- <script type="text/javascript">
-   var startTime= 0;
-   var endTime =0;
-   var eBegin = document.getElementById("begin-date"),
-     eEnd = document.getElementById("end-date");
-   var img = document.getElementById("calendar_img");
-   var beginCal = new PCalendar({
-     target:eBegin,
-     date:new Date(2000,0,1),
-     type:"hide",
-     format:format,
-     img:"./images/pc/pm/calendar.svg",
-     callback:function(date,format){
-       startTime = new Date(format);
-     }
-   });
-
-   var endCal = new PCalendar({
-     target:eEnd,
-     date:new Date(2017,0,6),
-     type:"hide",
-     format:format,
-     img:"./images/pc/pm/calendar.svg",
-     callback:function(date,format){
-       endTime = new Date(format);
-       if(startTime!= 0){
-         between = parseInt(parseInt(endTime-startTime)/1000/3600/24/30);
-         console.log(between)
-         if(between>1){
-           document.getElementById('TimeD').innerHTML=`Term: ${between} Months`
-         }
-       else{
-           document.getElementById('TimeD').innerHTML=`Term: ${between} Month`
-         }
-       }
-     }
-   });
-
-   function format(date){//MM/DD/YYYY
-     var month = (date.getMonth()+1)<10?"0"+(date.getMonth()+1):getMonth()+1;
-     var day = date.getDate()<10?"0"+date.getDate():date.getDate();
-     return month+"/"+day+"/"+date.getFullYear();
-   }
- </script>
- <!-- 选择相应的选项之后背景颜色变化 -->
-  <script type="text/javascript">
- //点击了add之后，默认选择personal，选择后会改变其背景颜色
-    var a = document.getElementsByName('per_cor');
-    var target = document.getElementsByClassName('select_1');
-    a[0].checked = true;
-    target[0].style.backgroundColor = "#EEF5FF";
-    for( var i=0;i<a.length;i++){
-      a[i].onclick = (function(obj,i){
-        return function(){
-          for(var j=0;j<target.length;j++){
-              if(j==i){
-                  continue;
-              }
-              else{
-                target[j].style.backgroundColor = "#FFFFFF";
-              }
-          }
-          target[i].style.backgroundColor = "#EEF5FF";;
-        }
-      })(a[i],i);
-    }
-  </script>
+ <script type="text/javascript" src='./js/日历的js.js'></script>
   </body>
 </html>
