--- a/management.html
+++ b/management.html
@@ -472,6 +472,7 @@
                                 <th><div class="status">
                                     <img src="./images/pc/pm/message.svg" style="width:20px;height:20px;margin-right:5px"/>
                                     PENDING
+                                    <img id='' src="./images/pc/pm/pencil.svg" style="width: 16px;height: 16px;margin-left: 10px;"/>
                                 </div></th>
                             </tr>
                         </tbody>
@@ -507,10 +508,8 @@
                 </div>
             </div>
             <!-- 这个是STATUS HISTORY -->
-            <div class="management_services card_white" name="change" style="display: none;">
-                <h1 class="card_title">OFFICE SERVICES fee</h1>
                 <!-- 这个是STATUS HISTORY -->
-                <div class="history">
+                <div class="history" name="change" style="display: none;">
                     <h1>Status history</h1>    
                     <div class="row">
                     <li>09/01/2021 9:35AM</li>
@@ -519,7 +518,6 @@
                     <li><img src="./images/pc/pm/head_pic.png"/>Jay Kirkland</li>
                 </div>
                 
-              </div>
             </div>
         </div>
           <div class="bottom_submit margin_top_40">
